# VOSpeaker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  perf-fp.sh
README_assets/: VOSpeaker_screenshots_annotated.xcf
src/: audio_conversion.rs  chatterbox_generator.rs  config_map_file.rs  create_fuz.rs  dbvo_manifest.rs  dialog_generator.rs  extract_fomod.rs  hashes.rs  main.rs  models.rs  progress.rs  project_dir.rs  project_picker.rs  static_resources.rs  topic_dir.rs  topic_file.rs  topic_lines.rs  validate_fomod.rs
src/init/: audio.rs  batch_tools.rs  errors.rs  expansions.rs  export.rs  filters.rs  generation.rs  generator.rs  mod.rs  receivers.rs  substitutions.rs  topics.rs
src/project_dir/: config_map_file.rs  hashes.rs  mod.rs  project_dir.rs  topic_dir.rs  topic_file.rs  topic_lines.rs
ui/: app-window.slint  errors.slint  expansions.slint  export.slint  filter.slint  folder_export_explanation.txt  generator.slint  progress.slint  project_selector.slint  substitutions.slint  topics.slint
ui/assets/: icons-src.txt
