[package]
name = "VOSpeaker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
byteorder = "1.5.0"
maplit = "1.0.2"
lazy-regex = "3.4.2"
thiserror = "2.0.17"
serde = "1.0.228"
toml = "0.9.11+spec-1.1.0"
md5 = "0.8.0"
async-trait = "0.1.89"
rodio = "0.21.1"
tokio = { version = "1.48.0", features = ["net", "fs", "io-util", "rt", "macros", "sync"] }
async-compat = "0.2.5"
rfd = "0.16.0"
tokio-util = "0.7.17"
idx = "0.2.0"

[build-dependencies]
slint-build = "1.14.1"
